--- a/reference_value_pair.info.yml
+++ b/reference_value_pair.info.yml
@@ -1,7 +1,7 @@
-name: Reference value pair
+name: Reference Value Pair
 type: module
 description: Defines a field type for storing a pair of an entity reference and a value.
 core: 8.x
 package: Field types
 dependencies:
-  - field
+  - drupal:field
