--- a/reference_value_pair.info.yml
+++ b/reference_value_pair.info.yml
@@ -1,6 +1,6 @@
 name: Reference Value Pair
 type: module
-description: Defines a field type for storing a pair of an entity reference and a value.
+description: Defines a few field types for storing a entity reference and a value together.
 # core: 8.x
 package: Field types
 dependencies:
